--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Smoove Booking Data Viz",
   "main": "index.html",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -13,7 +14,19 @@
   "author": "lyzs90",
   "license": "MIT",
   "devDependencies": {
+    "babel-preset-es2015": "^6.18.0",
+    "babelify": "^7.3.0",
     "browser-sync": "^2.18.5",
-    "gulp": "^3.9.1"
+    "browserify": "^13.1.1",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.0.0",
+    "gulp-util": "^3.0.8",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "jquery": "^3.1.1",
+    "leaflet": "^1.0.2",
+    "restify": "^4.3.0"
   }
 }
