--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Smoove Booking Data Viz",
   "main": "index.html",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +21,7 @@
     "gulp": "^3.9.1",
     "gulp-sass": "^3.0.0",
     "gulp-util": "^3.0.8",
+    "nodemon": "^1.11.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
