--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
         "restParams" : true
     },
     "env": {
+        "browser": true,
         "es6": true,
         "node": true,
         "mocha": true,
@@ -102,7 +103,7 @@
         "no-unreachable": 2,
         "no-unsafe-finally": 2,
         "no-unsafe-negation": 2,
-        "no-unused-vars": [2, { "vars": "all", "args": "none" }],
+        "no-unused-vars": [0, { "vars": "all", "args": "none" }],
         "no-useless-call": 2,
         "no-useless-computed-key": 2,
         "no-useless-constructor": 2,
@@ -132,6 +133,10 @@
         "yoda": [2, "never"]
     },
     "parserOptions": {
-        "sourceType": "module"
+        "ecmaVersion": 6,
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "jsx": true
+        }
     }
 }
