--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.html",
   "scripts": {
     "start": "nodemon server.js",
+    "build": "browserify -t [ babelify --presets [ react ] ] src/index.js -o dist/bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -14,20 +15,30 @@
   "author": "lyzs90",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
     "browser-sync": "^2.18.5",
     "browserify": "^13.1.1",
+    "browserify-hmr": "^0.3.5",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.0.0",
+    "gulp-sourcemaps": "^1.9.1",
     "gulp-util": "^3.0.8",
     "nodemon": "^1.11.0",
+    "react-transform-hmr": "^1.0.4",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
     "jquery": "^3.1.1",
     "leaflet": "^1.0.2",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-leaflet": "^1.0.2",
     "restify": "^4.3.0"
   }
 }
