--- a/.eslintrc
+++ b/.eslintrc
@@ -136,7 +136,8 @@
         "ecmaVersion": 6,
         "sourceType": "module",
         "ecmaFeatures": {
-            "jsx": true
+            "jsx": true,
+            "experimentalObjectRestSpread": true
         }
     }
 }
