--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-3": "^6.17.0",
     "babelify": "^7.3.0",
     "browser-sync": "^2.18.5",
     "browserify": "^13.1.1",
@@ -28,8 +29,10 @@
     "gulp-sass": "^3.0.0",
     "gulp-sourcemaps": "^1.9.1",
     "gulp-util": "^3.0.8",
+    "include-media": "^1.4.9",
     "nodemon": "^1.11.0",
     "react-transform-hmr": "^1.0.4",
+    "redux-devtools": "^3.3.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
@@ -39,6 +42,7 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-leaflet": "^1.0.2",
+    "react-redux": "^5.0.1",
     "restify": "^4.3.0"
   }
 }
