Add motion menu and styling

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-leaflet": "^1.0.2",
+    "react-motion-menu": "^0.2.2",
     "react-redux": "^5.0.1",
     "restify": "^4.3.0"
   }
