--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^15.4.1",
     "react-leaflet": "^1.0.2",
     "react-redux": "^5.0.1",
+    "recharts": "^0.20.2",
     "restify": "^4.3.0"
   }
 }
