--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,3 @@
 {
-  "presets": ["es2015", "react", "stage-3"],
-  "plugins": ["transform-runtime"],
-  "env": {
-    "development": {
-      "plugins": [
-        ["react-transform", {
-          "transforms": [
-            {
-              "transform": "react-transform-hmr",
-              "imports": ["react"],
-              "locals": ["module"]
-            }
-          ]
-        }]
-      ]
-    }
-  }
+  "presets": ["es2015", "react", "stage-3"]
 }
