--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-leaflet": "^1.0.2",
     "react-redux": "^5.0.1",
     "recharts": "^0.20.2",
+    "redux": "^3.6.0",
     "restify": "^4.3.0"
   }
 }
