--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,10 @@
 {
-  "presets": ["es2015", "react", "stage-3"]
+  "presets": ["es2015", "react", "stage-3"],
+  "env": {
+    "development": {
+      "plugins": [
+        ["transform-async-to-generator"]
+      ]
+    }
+  }
 }
