--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.21.0",
+    "babel-plugin-transform-async-to-generator": "^6.22.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-3": "^6.17.0",
@@ -29,6 +31,7 @@
     "include-media": "^1.4.9",
     "nodemon": "^1.11.0",
     "redux-devtools": "^3.3.1",
+    "redux-saga": "^0.14.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
