--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
+    "blueimp-md5": "^2.7.0",
     "leaflet": "^1.0.2",
+    "lodash": "^4.17.4",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-leaflet": "^1.0.2",
